--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER cpswan
 
 # install mysql
 RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server curl
 
 # listen on all interfaces, not only localhost
 RUN sed -i -e"s/^bind-address\s*=\s*127.0.0.1/bind-address = 0.0.0.0/" /etc/mysql/my.cnf
